--- a/index.html
+++ b/index.html
@@ -5,11 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>psudu class</title>
 </head>
 
 <body>
-
+    <h1>
+        positioning images
+    </h1>
+    <div class="swimmier">
+        <div class="boy">
+            <img src="boy.svg" alt="">
+        </div>
+        <div class="ring">
+            <img src="ring.svg" alt="">
+        </div>
+        <div class="water">
+            <img src="water.svg" alt="">
+        </div>
+    </div>
 </body>
 
 </html>
